--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,19 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Salla Vuorikko" />
+    <meta name="description" content="Salla Vuorikko's portfolio">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css"
-</head>
-<body>
-    <h1>Portfolio</h1>
-    <h2>Past</h2>
-    <h2>Present</h2>
-    <h2>Future</h2>
-    <h3>Skills</h3>
-    <h4>Javascript, Java, CSS</h4>
-
-
-</body>
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <div id="main_nav">
+        <nav>
+          <ul id="navUl">
+            <h3>
+            <li><a href="#past">Past</a></li>
+            <li><a href="#present">Present</a></li>
+            <li><a href= "#future">Future</a></li>
+            <li><a href= "#footer">Contact me</a></li>
+          </h3>
+          </ul>
+        </nav>
+      </div>
+      <section id="hero-banner">
+        <h1>Welcome to my portfolio</h1>
+      </section>
+    </header>
+    <main>
+      <section id = "past">
+      <h2>Past</h2>
+      <img src="https://source.unsplash.com/vrbZVyX2k4I/300x250" alt="plant" />
+      <p>
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, sequi, illo quia ad eum cum sapiente delectus voluptates sed omnis ullam, quibusdam quam commodi? Aliquid tempora, nam placeat autem ratione consectetur quo. Labore nihil eum dolor cupiditate quo laborum reiciendis, dolore ab voluptate minima minus obcaecati. In beatae ut voluptatibus deleniti ad placeat quidem similique ipsa accusamus autem, nisi quasi minima, unde, soluta error? Earum corrupti quia eius consectetur cum provident necessitatibus laudantium qui doloribus mollitia totam dolorum aut, voluptatibus tempora maiores fugit, quibusdam harum deleniti assumenda. Laboriosam ullam nam dolore. Veniam totam ipsum animi, repellendus, adipisci deleniti distinctio, recusandae voluptatem veritatis vitae consequatur. Doloremque sequi expedita, eligendi magnam nostrum vitae neque quidem laboriosam quod ab perferendis nihil? Cupiditate, aut consequuntur dicta distinctio inventore, a labore tempora autem asperiores earum aspernatur mollitia necessitatibus, deleniti obcaecati? Praesentium aperiam quis, possimus commodi maiores ad libero blanditiis, magni velit deleniti rem tempora ullam beatae aspernatur ut distinctio ducimus, deserunt error. Veritatis, ipsa placeat libero ipsam eaque alias nobis earum, quibusdam molestias deleniti porro temporibus obcaecati et harum officia. Sequi ex temporibus nulla illum quod doloribus. Impedit temporibus veritatis dicta, eius molestias, nesciunt veniam dolores aliquid reprehenderit numquam quo ipsum inventore, voluptatum iure eos.
+      </p>
+  </section>
+  <section id = "present">
+      <h2>Present</h2>
+      <img src="https://source.unsplash.com/DpphPG9ENsI/200x300" alt="">
+      <p>
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. At sit magni eveniet impedit incidunt vero ad saepe. Ea soluta aut facilis esse quia omnis sunt eligendi quae, doloribus, perspiciatis eum quam illum nobis fugit labore velit est expedita similique porro impedit dolore, deleniti aperiam. Provident, eveniet obcaecati? Animi laboriosam culpa placeat quas quae, iusto dolores esse ipsa vel, aspernatur reprehenderit consequuntur pariatur maiores excepturi labore! Hic possimus mollitia veniam aut? Hic laudantium accusantium ducimus atque dolores aliquam quas vitae, perspiciatis sunt dolore. Quos architecto placeat, quia accusamus deleniti a quibusdam. Earum nemo porro quod voluptate soluta ipsum veritatis veniam suscipit eveniet delectus rem non nulla harum, voluptas dolores ipsa mollitia esse aspernatur. Dicta minus, quas nam aspernatur assumenda tenetur repellat provident aliquam voluptatum velit in cumque odio esse voluptatem impedit! Eos, illo. Perspiciatis doloribus cupiditate recusandae maiores eligendi, consequatur asperiores, ducimus laborum possimus, odio dolor provident expedita debitis neque adipisci ullam perferendis! Eligendi maiores aliquam, neque reiciendis sit ratione! Eos molestias temporibus qui, culpa incidunt maiores vitae id alias cupiditate laudantium ab consectetur fuga, provident consequuntur! Sint nisi, iure tenetur nam cupiditate dolor quis quam delectus officia esse quibusdam tempora ea eligendi dolorem placeat? Tempore repellat reiciendis pariatur placeat quae.
+      </p>
+  </section>
+  <section id = "future">
+      <h2>Future</h2>
+      <img src="https://source.unsplash.com/3Kv48NS4WUU/300x250" alt="">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae dicta
+        soluta debitis repellendus cupiditate maxime nobis unde eum, quod
+        aliquam atque iure, saepe et. Pariatur repellat optio, mollitia nulla,
+        nihil, magni tenetur soluta at impedit molestiae doloremque quibusdam
+        cumque iste rerum iusto! Odit, ratione eos ea, sapiente dolor atque quia
+        sunt architecto reprehenderit voluptatum voluptates eum provident
+        repudiandae temporibus mollitia iusto perspiciatis distinctio cum minus
+        laborum praesentium quidem! Maxime placeat officia quam distinctio quod
+        molestiae veniam corrupti facere cupiditate repellendus! Mollitia atque
+        cumque sit esse, similique cupiditate aspernatur animi exercitationem
+        vel debitis nisi ab eligendi nobis facere maiores illum architecto.
+      </p>
+      </section>
+    </div>
+    </main>
+    <footer id="footer">
+      <div class="container">
+      <h2>Contact me</h2>
+      <form>
+        <div class="form-group">
+        <label for="name">Your name</label>
+        <input type="text" name="name" id="name"/>
+      </div>
+      <div class="form-group">
+        <label for="email">Your email</label>
+        <input type="email" name="email" id="email"/>
+      </div>
+      <div class="form-group">
+        <label for="message">Message</label>
+        <textarea name="message" id="message"></textarea>
+      </div>
+        <button type="submit">Send message</button>
+      </form>
+      <section id="copywright">
+          <p>Copyright; My Website2021</p>
+      </section>
+      </div> 
+    </footer>
+    <script src="script.js"></script>
+  </body>
 </html>
