--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -31,11 +31,24 @@
     </header>
     <main>
       <section id = "past">
-      <h2>Past</h2>
-      <img src="https://source.unsplash.com/vrbZVyX2k4I/300x250" alt="plant" />
-      <p>
-Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, sequi, illo quia ad eum cum sapiente delectus voluptates sed omnis ullam, quibusdam quam commodi? Aliquid tempora, nam placeat autem ratione consectetur quo. Labore nihil eum dolor cupiditate quo laborum reiciendis, dolore ab voluptate minima minus obcaecati. In beatae ut voluptatibus deleniti ad placeat quidem similique ipsa accusamus autem, nisi quasi minima, unde, soluta error? Earum corrupti quia eius consectetur cum provident necessitatibus laudantium qui doloribus mollitia totam dolorum aut, voluptatibus tempora maiores fugit, quibusdam harum deleniti assumenda. Laboriosam ullam nam dolore. Veniam totam ipsum animi, repellendus, adipisci deleniti distinctio, recusandae voluptatem veritatis vitae consequatur. Doloremque sequi expedita, eligendi magnam nostrum vitae neque quidem laboriosam quod ab perferendis nihil? Cupiditate, aut consequuntur dicta distinctio inventore, a labore tempora autem asperiores earum aspernatur mollitia necessitatibus, deleniti obcaecati? Praesentium aperiam quis, possimus commodi maiores ad libero blanditiis, magni velit deleniti rem tempora ullam beatae aspernatur ut distinctio ducimus, deserunt error. Veritatis, ipsa placeat libero ipsam eaque alias nobis earum, quibusdam molestias deleniti porro temporibus obcaecati et harum officia. Sequi ex temporibus nulla illum quod doloribus. Impedit temporibus veritatis dicta, eius molestias, nesciunt veniam dolores aliquid reprehenderit numquam quo ipsum inventore, voluptatum iure eos.
-      </p>
+        <h2>Past</h2>
+        <div class="past_boxes">
+        <div class="box">
+          <img src="https://source.unsplash.com/vrbZVyX2k4I/" alt="plant" />
+          <p>Lorem ipsum dolor</p>
+          <a href="link">See more</a>
+        </div> 
+        <div class="box">
+          <img src="https://source.unsplash.com/hLxqYJspAkE/" alt="plant" />
+          <p>Lorem ipsum dolor</p>
+          <a href="link">See more</a>
+        </div> 
+        <div class="box">
+          <img src="https://source.unsplash.com/-qvrwWbzvpA" alt="plant" />
+          <p>Lorem ipsum dolor</p>
+          <a href="link">See more</a>
+        </div> 
+        </div> 
   </section>
   <section id = "present">
       <h2>Present</h2>
