--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Salla Vuorikko" />
     <meta name="description" content="Salla Vuorikko's portfolio">
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/42de6050e4.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <title>Portfolio</title>
@@ -19,8 +20,8 @@
             <h3>
             <li><a href="#past">Past</a></li>
             <li><a href="#present">Present</a></li>
-            <li><a href= "#future">Future</a></li>
-            <li><a href= "#footer">Contact me</a></li>
+            <li><a href="#future">Future</a></li>
+            <li><a href="#footer">Contact me</a></li>
           </h3>
           </ul>
         </nav>
@@ -31,48 +32,52 @@
     </header>
     <main>
       <section id = "past">
-        <h2>Past</h2>
+        <h2>Work</h2>
         <div class="past_boxes">
         <div class="box">
           <img src="https://source.unsplash.com/vrbZVyX2k4I/" alt="plant" />
-          <p>Lorem ipsum dolor</p>
+          <h3><p>Lorem ipsum dolor</p></h3>
           <a href="link">See more</a>
         </div> 
         <div class="box">
           <img src="https://source.unsplash.com/hLxqYJspAkE/" alt="plant" />
-          <p>Lorem ipsum dolor</p>
+          <h3><p>Lorem ipsum dolor</p></h3>
           <a href="link">See more</a>
         </div> 
         <div class="box">
           <img src="https://source.unsplash.com/-qvrwWbzvpA" alt="plant" />
-          <p>Lorem ipsum dolor</p>
+          <h3><p>Lorem ipsum dolor</p></h3>
           <a href="link">See more</a>
         </div> 
         </div> 
   </section>
   <section id = "present">
-      <h2>Present</h2>
+      <h2>Experience</h2>
       <img src="https://source.unsplash.com/DpphPG9ENsI/200x300" alt="">
       <p>
 Lorem ipsum, dolor sit amet consectetur adipisicing elit. At sit magni eveniet impedit incidunt vero ad saepe. Ea soluta aut facilis esse quia omnis sunt eligendi quae, doloribus, perspiciatis eum quam illum nobis fugit labore velit est expedita similique porro impedit dolore, deleniti aperiam. Provident, eveniet obcaecati? Animi laboriosam culpa placeat quas quae, iusto dolores esse ipsa vel, aspernatur reprehenderit consequuntur pariatur maiores excepturi labore! Hic possimus mollitia veniam aut? Hic laudantium accusantium ducimus atque dolores aliquam quas vitae, perspiciatis sunt dolore. Quos architecto placeat, quia accusamus deleniti a quibusdam. Earum nemo porro quod voluptate soluta ipsum veritatis veniam suscipit eveniet delectus rem non nulla harum, voluptas dolores ipsa mollitia esse aspernatur. Dicta minus, quas nam aspernatur assumenda tenetur repellat provident aliquam voluptatum velit in cumque odio esse voluptatem impedit! Eos, illo. Perspiciatis doloribus cupiditate recusandae maiores eligendi, consequatur asperiores, ducimus laborum possimus, odio dolor provident expedita debitis neque adipisci ullam perferendis! Eligendi maiores aliquam, neque reiciendis sit ratione! Eos molestias temporibus qui, culpa incidunt maiores vitae id alias cupiditate laudantium ab consectetur fuga, provident consequuntur! Sint nisi, iure tenetur nam cupiditate dolor quis quam delectus officia esse quibusdam tempora ea eligendi dolorem placeat? Tempore repellat reiciendis pariatur placeat quae.
       </p>
   </section>
   <section id = "future">
-      <h2>Future</h2>
-      <img src="https://source.unsplash.com/3Kv48NS4WUU/300x250" alt="">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae dicta
-        soluta debitis repellendus cupiditate maxime nobis unde eum, quod
-        aliquam atque iure, saepe et. Pariatur repellat optio, mollitia nulla,
-        nihil, magni tenetur soluta at impedit molestiae doloremque quibusdam
-        cumque iste rerum iusto! Odit, ratione eos ea, sapiente dolor atque quia
-        sunt architecto reprehenderit voluptatum voluptates eum provident
-        repudiandae temporibus mollitia iusto perspiciatis distinctio cum minus
-        laborum praesentium quidem! Maxime placeat officia quam distinctio quod
-        molestiae veniam corrupti facere cupiditate repellendus! Mollitia atque
-        cumque sit esse, similique cupiditate aspernatur animi exercitationem
-        vel debitis nisi ab eligendi nobis facere maiores illum architecto.
-      </p>
+      <h2>Skills</h2>
+      <div class="skill_boxes">
+        <div class="box">
+      <i class="fab fa-css3 fa-4x"></i>
+          <div id="bar1" class="progressbar"></div>
+        </div>
+        <div class="box">
+      <i class="fab fa-html5 fa-4x"></i>
+      <div id="bar2" class="progressbar"></div>
+    </div>
+    <div class="box">
+      <i class="fab fa-js-square fa-4x"></i>
+      <div id="bar3" class="progressbar"></div>
+    </div>
+    <div class="box">
+      <i class="fab fa-java fa-4x"></i>
+      <div id="bar4" class="progressbar"></div>
+    </div>
+    </div>
       </section>
     </div>
     </main>
