--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -18,9 +18,9 @@
         <nav>
           <ul id="navUl">
             <h3>
-            <li><a href="#past">Past</a></li>
-            <li><a href="#present">Present</a></li>
-            <li><a href="#future">Future</a></li>
+            <li><a href="#past">Work</a></li>
+            <li><a href="#present">Experience</a></li>
+            <li><a href="#future">Skills</a></li>
             <li><a href="#footer">Contact me</a></li>
           </h3>
           </ul>
@@ -99,6 +99,9 @@ Lorem ipsum, dolor sit amet consectetur adipisicing elit. At sit magni eveniet i
       </div>
         <button type="submit">Send message</button>
       </form>
+      <button id="backToTop">
+        <i class="fas fa-angle-double-up fa-3x"></i>
+      </button>
       <section id="copywright">
           <p>Copyright; My Website2021</p>
       </section>
