gallery page added

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -21,6 +21,7 @@
             <li><a href="#past">Work</a></li>
             <li><a href="#present">Experience</a></li>
             <li><a href="#future">Skills</a></li>
+            <li><a href="./gallery.html">Gallery</a></li>
             <li><a href="#footer">Contact me</a></li>
           </h3>
           </ul>
