--- a/Portfolio/gallery.html
+++ b/Portfolio/gallery.html
@@ -18,6 +18,9 @@
         <nav>
           <ul id="navUl">
             <h3>
+              <li>
+                <a href="./index.html#header"><img id="logo" src="Logo2.svg" alt=""></a>
+              </li>
             <li><a href="./index.html#past">Work</a></li>
             <li><a href="./index.html#present">Experience</a></li>
             <li><a href="./index.html#future">Skills</a></li>
