--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,12 +12,15 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header>
+    <header id="header">
       <div class="container">
         <div id="main_nav">
         <nav>
           <ul id="navUl">
             <h3>
+              <li>
+                <a href="#header"><img id="logo" src="Logo2.svg" alt=""></a>
+              </li>
             <li><a href="#past">Work</a></li>
             <li><a href="#present">Experience</a></li>
             <li><a href="#future">Skills</a></li>
