--- a/Portfolio/animation.html
+++ b/Portfolio/animation.html
@@ -24,49 +24,13 @@
             <li><a href="./index.html#past">Work</a></li>
             <li><a href="./index.html#present">Experience</a></li>
             <li><a href="./index.html#future">Skills</a></li>
-            <li><a href="animation.html">Animation</a></li>
+            <li><a href="./gallery.html">Gallery</a></li>
             <li><a href="#footer">Contact me</a></li>
           </h3>
           </ul>
         </nav>
       </div>
     </header>
-    <main>
-        <section id="gallery">
-            <div class="galleryContainer">
-                <div class="gallery-grid">
-                    <div class="grid-item-1 grid-div">
-                        <img class="grid-item" src="https://source.unsplash.com/j8SFKQT2rwk" alt="pic from Unsplash">
-                    </div>
-                    <div class="grid-item-2 grid-div">
-                        <img class="grid-item" src="https://source.unsplash.com/W3IMzbvY69U" alt="pic from Unsplash">
-                    </div>
-                    <div class="grid-item-3 grid-div">
-                        <img src="https://source.unsplash.com/2rXG981349E" alt="pic from Unsplash">
-                    </div>
-                    <div class="grid-item-4 grid-div">
-                        <img class="grid-item" src="https://source.unsplash.com/6FKK1L6LDVc" alt="pic from Unsplash">
-                    </div>
-                    <div class="grid-item-5 grid-div">
-                        <img class="grid-item" src="https://source.unsplash.com/2fuhR3GfQf8" alt="pic from Unsplash">
-                    </div>
-                    <div class="grid-item-6 grid-div">
-                        <img class="grid-item" src="https://source.unsplash.com/G4cZjDTGgVk" alt="pic from Unsplash">
-                    </div>
-                    <div class="grid-item-7 grid-div">
-                        <img class="grid-item" src="https://source.unsplash.com/xIGQcvz3f_0" alt="pic from Unsplash">
-                    </div>
-                    <div class="grid-item-8 grid-div">
-                        <img class="grid-item" src="https://source.unsplash.com/rbZRMzOdC3M" alt="pic from Unsplash">
-                    </div>
-                    <div class="grid-item-9 grid-div">
-                        <img class="grid-item" src="https://source.unsplash.com/0pLTx5nUhGE" alt="pic from Unsplash">
-                    </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
     <footer id="footer">
       <div class="container">
       <h2>Contact me</h2>
