--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -14,7 +14,7 @@
   <body>
     <header id="header">
       <div class="container">
-        <div id="main_nav">
+        <div id="header_nav">
         <nav>
           <ul id="navUl">
             <h3>
@@ -25,6 +25,7 @@
             <li><a href="#present">Experience</a></li>
             <li><a href="#future">Skills</a></li>
             <li><a href="./gallery.html">Gallery</a></li>
+            <li><a href="animation.html">Animation</a></li>
             <li><a href="#footer">Contact me</a></li>
           </h3>
           </ul>
