--- a/Portfolio/animation.html
+++ b/Portfolio/animation.html
@@ -11,9 +11,8 @@
     <link rel="stylesheet" href="style.css" />
     <title>Portfolio</title>
   </head>
-  <body>
+  <body id="animationBody">
     <header>
-      <div class="container">
         <div id="header_nav">
         <nav>
           <ul id="navUl">
@@ -31,8 +30,17 @@
         </nav>
       </div>
     </header>
-    <footer id="footer">
-      <div class="container">
+    <main>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="firefly"></div>
+<div class="staticFly" id="first"></div>
+<div class="staticFly" id="second"></div>
+<div class="staticFly" id="third"></div>
+    </main>
+    <footer id="animationFooter">
       <h2>Contact me</h2>
       <form>
         <div class="form-group">
@@ -55,7 +63,7 @@
       <section id="copywright">
           <p>Copyright; My Website2021</p>
       </section>
-      </div> 
+      </div>
     </footer>
     <script src="script.js"></script>
   </body>
