portfolio welcome text edited

--- a/Portfolio/animation.html
+++ b/Portfolio/animation.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Portfolio</title>
+    <title>Salla Vuorikko</title>
     <link rel="icon" type="image/svg+xml" href="fav2.svg"/>
   </head>
   <body id="animationBody">
