--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet"
   />
     <link rel="stylesheet" href="style.css" />
-    <title>Portfolio</title>
+    <title>Salla Vuorikko</title>
     <link rel="icon" type="image/svg+xml" href="fav2.svg"/>
   </head>
   <body>
@@ -35,7 +35,7 @@
           </ul>
         </nav>
       <div id="hero-banner">
-        <h1>Welcome to my portfolio</h1>
+        <h1>Hi, I'm Salla Vuorikko</h1>
       </div>
     </header>
     <main>
