--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -35,7 +35,8 @@
           </ul>
         </nav>
       <div id="hero-banner">
-        <h1>Hi, I'm Salla Vuorikko</h1>
+        <h1>Hi, I'm <br>
+          Salla Vuorikko</h1>
       </div>
     </header>
     <main>
