portfolio skills styling

--- a/Portfolio/animation.html
+++ b/Portfolio/animation.html
@@ -73,7 +73,7 @@
         <i class="fas fa-angle-double-up fa-3x"></i>
       </button>
       <section id="copyright">
-        <p>Copyright; My Website2021</p>
+        <p>Copyright; Salla Vuorikko 2021</p>
         <p>pictures from Unsplash</p>
       </section>
     </footer>
