--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -114,7 +114,7 @@ Lorem ipsum, dolor sit amet consectetur adipisicing elit. At sit magni eveniet i
         <i class="fas fa-angle-double-up fa-3x"></i>
       </button>
       <section id="copyright">
-          <p>Copyright; My Website2021</p>
+          <p>Copyright; Salla Vuorikko 2021</p>
           <p>Pictures from Unsplash</p>
       </section> 
     </footer>
